--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "*.podspec",
     "!lib/typescript/example",
     "!ios/build",
-    "!android/build",
+    "!android/build/intermediates",
+    "!android/build/outputs",
+    "!android/build/tmp",
+    "!android/build/reports",
+    "!android/build/kotlin",
+    "!android/build/classes",
+    "!android/build/so",
     "!android/gradle",
     "!android/gradlew",
     "!android/gradlew.bat",
