--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,8 @@ ApiVideoLiveStream_minSdkVersion=24
 ApiVideoLiveStream_targetSdkVersion=35
 ApiVideoLiveStream_compileSdkVersion=35
 ApiVideoLiveStream_ndkVersion=26.1.10909125
+ApiVideoLiveStream_reactNativeVersion=0.73.6
+android.useAndroidX=true
+android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=35
+org.gradle.jvmargs=-Xmx4g -Dkotlin.daemon.jvm.options=-Xmx2g
