--- a/android/build.gradle
+++ b/android/build.gradle
@@ -213,6 +213,7 @@ dependencies {
     exclude group: 'video.api', module: 'rtmpdroid'
     // exclude the transitive dependency to use packed version to avoid conflict with libssl.so and libcrypto.so
   }
+  implementation("video.api:rtmpdroid:1.0.2")
   implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
   implementation 'androidx.core:core-ktx:1.12.0'
   implementation 'androidx.appcompat:appcompat:1.6.1'
