--- a/android/build.gradle
+++ b/android/build.gradle
@@ -131,6 +131,11 @@ android {
     jniLibs {
       pickFirsts += ["**/librtmpdroid.so"]
     }
+    // Exclude rtmpdroid classes from being packaged in the AAR
+    // They come from the JAR file dependency, not from the module's own classes
+    resources {
+      excludes += ["**/video/api/rtmpdroid/**"]
+    }
   }
   
   // Exclude rtmpdroid from runtime configurations to prevent classes from being bundled
@@ -210,5 +215,91 @@ if (isNewArchitectureEnabled()) {
     jsRootDir = file("../src")
     libraryName = "ApiVideoLiveStreamView"
     codegenJavaPackageName = "video.api.reactnative.livestream"
+  }
+}
+
+// Exclude rtmpdroid classes from the AAR's classes.jar
+// This prevents duplicate classes when the app includes the JAR directly
+tasks.named("bundleReleaseAar").configure {
+  doLast {
+    def aarFile = file("${buildDir}/outputs/aar/${project.name}-release.aar")
+    if (aarFile.exists()) {
+      def tempDir = file("${buildDir}/tmp/aar-cleanup")
+      tempDir.deleteDir()
+      tempDir.mkdirs()
+      
+      // Extract AAR
+      copy {
+        from zipTree(aarFile)
+        into tempDir
+      }
+      
+      // Remove rtmpdroid classes from classes.jar
+      def classesJar = file("${tempDir}/classes.jar")
+      if (classesJar.exists()) {
+        def classesTempDir = file("${tempDir}/classes-extracted")
+        classesTempDir.deleteDir()
+        classesTempDir.mkdirs()
+        
+        // Extract classes.jar
+        copy {
+          from zipTree(classesJar)
+          into classesTempDir
+        }
+        
+        // Delete rtmpdroid package
+        file("${classesTempDir}/video/api/rtmpdroid").deleteDir()
+        
+        // Recreate classes.jar without rtmpdroid
+        ant.jar(destfile: classesJar, basedir: classesTempDir)
+        classesTempDir.deleteDir()
+      }
+      
+      // Recreate AAR
+      ant.zip(destfile: aarFile, basedir: tempDir, includes: "**/*")
+      tempDir.deleteDir()
+    }
+  }
+}
+
+tasks.named("bundleDebugAar").configure {
+  doLast {
+    def aarFile = file("${buildDir}/outputs/aar/${project.name}-debug.aar")
+    if (aarFile.exists()) {
+      def tempDir = file("${buildDir}/tmp/aar-cleanup")
+      tempDir.deleteDir()
+      tempDir.mkdirs()
+      
+      // Extract AAR
+      copy {
+        from zipTree(aarFile)
+        into tempDir
+      }
+      
+      // Remove rtmpdroid classes from classes.jar
+      def classesJar = file("${tempDir}/classes.jar")
+      if (classesJar.exists()) {
+        def classesTempDir = file("${tempDir}/classes-extracted")
+        classesTempDir.deleteDir()
+        classesTempDir.mkdirs()
+        
+        // Extract classes.jar
+        copy {
+          from zipTree(classesJar)
+          into classesTempDir
+        }
+        
+        // Delete rtmpdroid package
+        file("${classesTempDir}/video/api/rtmpdroid").deleteDir()
+        
+        // Recreate classes.jar without rtmpdroid
+        ant.jar(destfile: classesJar, basedir: classesTempDir)
+        classesTempDir.deleteDir()
+      }
+      
+      // Recreate AAR
+      ant.zip(destfile: aarFile, basedir: tempDir, includes: "**/*")
+      tempDir.deleteDir()
+    }
   }
 }
