--- a/android/build.gradle
+++ b/android/build.gradle
@@ -245,16 +245,13 @@ dependencies {
     exclude group: 'io.github.thibaultbee', module: 'streampack'
     // Exclude original StreamPack to use patched version
   }
-<<<<<<< HEAD
   
-  // Use patched StreamPack from pacobabs fork with Android 8.1 compatibility fixes
-  implementation 'com.github.pacobabs:StreamPack:android-8.1-compatibility-SNAPSHOT'
-  
-=======
   // Use compileOnly so the JAR is available at compile time but not bundled in the AAR
   // The app module will include the JAR directly to avoid duplicate classes
   compileOnly(files("libs/rtmpdroid-1.0.2.jar"))
->>>>>>> ef627ae1e1e561a02905707281d2bbdd2c6cde26
+  
+  // StreamPack is provided by the app module as a local patched AAR
+  // Located at: frontend/android/app/libs/streampack-2.6.1-patched.aar
   implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
   implementation 'androidx.core:core-ktx:1.12.0'
   implementation 'androidx.appcompat:appcompat:1.6.1'
