--- a/android/build.gradle
+++ b/android/build.gradle
@@ -104,18 +104,20 @@ android {
     targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
     buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
     consumerProguardFiles "consumer-rules.pro"
-    externalNativeBuild {
-      cmake {
-        if (enableFlexiblePageSize) {
-          arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
-          arguments "-DCMAKE_SHARED_LINKER_FLAGS=-Wl,-z,max-page-size=16384"
-          arguments "-DPACKAGING=PACKED"
-        } else {
-          arguments "-DPACKAGING=UNPACKED"
-        }
-        abiFilters "armeabi-v7a", "arm64-v8a"
-      }
-    }
+    // DISABLED: Using pre-built binaries for 10x faster builds
+    // No need to compile OpenSSL + librtmp from source every time
+    // externalNativeBuild {
+    //   cmake {
+    //     if (enableFlexiblePageSize) {
+    //       arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
+    //       arguments "-DCMAKE_SHARED_LINKER_FLAGS=-Wl,-z,max-page-size=16384"
+    //       arguments "-DPACKAGING=PACKED"
+    //     } else {
+    //       arguments "-DPACKAGING=UNPACKED"
+    //     }
+    //     abiFilters "armeabi-v7a", "arm64-v8a"
+    //   }
+    // }
   }
 
   compileOptions {
@@ -127,12 +129,14 @@ android {
     buildConfig true
   }
 
-  externalNativeBuild {
-    cmake {
-      path "src/main/cpp/CMakeLists.txt"
-      version "3.22.1"
-    }
-  }
+  // DISABLED: Using pre-built binaries for 10x faster builds
+  // No need to compile OpenSSL + librtmp from source every time
+  // externalNativeBuild {
+  //   cmake {
+  //     path "src/main/cpp/CMakeLists.txt"
+  //     version "3.22.1"
+  //   }
+  // }
 
   buildTypes {
     release {
